Fixed unused imports and usage of deprecated method.